--- a/Ej1_TaTeTi/TaTeTiClassLib/TaTeTiClassLib.csproj
+++ b/Ej1_TaTeTi/TaTeTiClassLib/TaTeTiClassLib.csproj
@@ -49,6 +49,7 @@
     <None Include="uml\TaTeTi.uml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="uml\TaTeTi_diagrama_secuencia.jpg" />
     <Content Include="uml\TaTeTi.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
