--- a/Ej2_EscalerasYSerpientes/EscalerasYSerpientes/EscalerasYSerpientesDesktop.csproj
+++ b/Ej2_EscalerasYSerpientes/EscalerasYSerpientes/EscalerasYSerpientesDesktop.csproj
@@ -105,8 +105,6 @@
       <Name>EscalerasYSerpientesClassLib</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="img\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
