--- a/Ej1_TaTeTi/TaTeTiWeb/TaTeTiWeb.csproj
+++ b/Ej1_TaTeTi/TaTeTiWeb/TaTeTiWeb.csproj
@@ -109,6 +109,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\mi.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
