arreglo orden del mazo

--- a/Ej3_Poquer/PoquerDesktop/PoquerDesktop.csproj
+++ b/Ej3_Poquer/PoquerDesktop/PoquerDesktop.csproj
@@ -112,60 +112,60 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="doc\formulario.jpg" />
-    <Content Include="Resources\0back.png" />
-    <Content Include="Resources\C10.png" />
-    <Content Include="Resources\C11J.png" />
-    <Content Include="Resources\C12Q.png" />
-    <Content Include="Resources\C13K.png" />
-    <Content Include="Resources\C1A.png" />
-    <Content Include="Resources\C2.png" />
-    <Content Include="Resources\C3.png" />
-    <Content Include="Resources\C4.png" />
-    <Content Include="Resources\C5.png" />
-    <Content Include="Resources\C6.png" />
-    <Content Include="Resources\C7.png" />
-    <Content Include="Resources\C8.png" />
-    <Content Include="Resources\C9.png" />
-    <Content Include="Resources\D10.png" />
-    <Content Include="Resources\D11J.png" />
-    <Content Include="Resources\D12K.png" />
-    <Content Include="Resources\D13Q.png" />
-    <Content Include="Resources\D1A.png" />
-    <Content Include="Resources\D2.png" />
-    <Content Include="Resources\D3.png" />
-    <Content Include="Resources\D4.png" />
-    <Content Include="Resources\D5.png" />
-    <Content Include="Resources\D6.png" />
-    <Content Include="Resources\D7.png" />
-    <Content Include="Resources\D8.png" />
-    <Content Include="Resources\D9.png" />
+    <Content Include="Resources\00_T01A.png" />
+    <Content Include="Resources\01_T02.png" />
+    <Content Include="Resources\02_T03.png" />
+    <Content Include="Resources\03_T04.png" />
+    <Content Include="Resources\04_T05.png" />
+    <Content Include="Resources\05_T06.png" />
+    <Content Include="Resources\06_T07.png" />
+    <Content Include="Resources\07_T08.png" />
+    <Content Include="Resources\08_T09.png" />
+    <Content Include="Resources\09_T10.png" />
+    <Content Include="Resources\10_T11J.png" />
+    <Content Include="Resources\11_T12Q.png" />
+    <Content Include="Resources\12_T13K.png" />
+    <Content Include="Resources\13_D01A.png" />
+    <Content Include="Resources\14_D02.png" />
+    <Content Include="Resources\15_D03.png" />
+    <Content Include="Resources\16_D04.png" />
+    <Content Include="Resources\17_D05.png" />
+    <Content Include="Resources\18_D06.png" />
+    <Content Include="Resources\19_D07.png" />
+    <Content Include="Resources\20_D08.png" />
+    <Content Include="Resources\21_D09.png" />
+    <Content Include="Resources\22_D10.png" />
+    <Content Include="Resources\23_D11J.png" />
+    <Content Include="Resources\25_D13K.png" />
+    <Content Include="Resources\24_D12Q.png" />
+    <Content Include="Resources\26_C01A.png" />
+    <Content Include="Resources\27_C02.png" />
+    <Content Include="Resources\28_C03.png" />
+    <Content Include="Resources\29_C04.png" />
+    <Content Include="Resources\30_C05.png" />
+    <Content Include="Resources\31_C06.png" />
+    <Content Include="Resources\32_C07.png" />
+    <Content Include="Resources\33_C08.png" />
+    <Content Include="Resources\34_C09.png" />
+    <Content Include="Resources\35_C10.png" />
+    <Content Include="Resources\36_C11J.png" />
+    <Content Include="Resources\37_C12Q.png" />
+    <Content Include="Resources\38_C13K.png" />
+    <Content Include="Resources\39_P01A.png" />
+    <Content Include="Resources\40_P02.png" />
+    <Content Include="Resources\41_P03.png" />
+    <Content Include="Resources\42_P04.png" />
+    <Content Include="Resources\43_P05.png" />
+    <Content Include="Resources\44_P06.png" />
+    <Content Include="Resources\45_P07.png" />
+    <Content Include="Resources\46_P09.png" />
+    <Content Include="Resources\47_P10.png" />
+    <Content Include="Resources\48_P11J.png" />
+    <Content Include="Resources\49_P12Q.png" />
+    <Content Include="Resources\50_P13K.png" />
+    <Content Include="Resources\51_back.png" />
     <Content Include="Resources\info.txt" />
     <Content Include="Resources\J.png" />
-    <Content Include="Resources\P10.png" />
-    <Content Include="Resources\P11J.png" />
-    <Content Include="Resources\P12Q.png" />
-    <Content Include="Resources\P13K.png" />
-    <Content Include="Resources\P1A.png" />
-    <Content Include="Resources\P2.png" />
-    <Content Include="Resources\P3.png" />
-    <Content Include="Resources\P4.png" />
-    <Content Include="Resources\P5.png" />
-    <Content Include="Resources\P6.png" />
-    <Content Include="Resources\P7.png" />
-    <Content Include="Resources\P9.png" />
-    <Content Include="Resources\T10.png" />
-    <Content Include="Resources\T11J.png" />
-    <Content Include="Resources\T12Q.png" />
-    <Content Include="Resources\T13K.png" />
-    <Content Include="Resources\T1A.png" />
-    <Content Include="Resources\T2.png" />
-    <Content Include="Resources\T3.png" />
-    <Content Include="Resources\T4.png" />
-    <Content Include="Resources\T5.png" />
-    <Content Include="Resources\T6.png" />
-    <Content Include="Resources\T7.png" />
-    <Content Include="Resources\T8.png" />
-    <Content Include="Resources\T9.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
