--- a/Ej1_TaTeTi/TaTeTiWeb/TaTeTiWeb.csproj
+++ b/Ej1_TaTeTi/TaTeTiWeb/TaTeTiWeb.csproj
@@ -105,8 +105,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\mi.css" />
     <Content Include="Default.aspx" />
+    <Content Include="docs\qr.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -210,6 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
